// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Trapped assets > PolkadotXcm assethub 1`] = `
[
  {
    "data": {
      "outcome": {
        "Complete": {
          "used": {
            "proofSize": "(rounded 6200)",
            "refTime": "(rounded 290000000)",
          },
        },
      },
    },
    "method": "Attempted",
    "section": "polkadotXcm",
  },
]
`;

exports[`Trapped assets > assetHubs events xcm queue pallet 1`] = `
[
  {
    "data": {
      "messageHash": "(hash)",
    },
    "method": "XcmpMessageSent",
    "section": "xcmpQueue",
  },
]
`;

exports[`Trapped assets > peregrine asset switch pallet 1`] = `
[
  {
    "data": {
      "assets": {
        "V3": [
          {
            "fun": {
              "Fungible": "(rounded 7200)",
            },
            "id": {
              "Concrete": {
                "interior": {
                  "X2": [
                    {
                      "GlobalConsensus": {
                        "Ethereum": {
                          "chainId": "(rounded 11000000)",
                        },
                      },
                    },
                    {
                      "AccountKey20": {
                        "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                        "network": null,
                      },
                    },
                  ],
                },
                "parents": 2,
              },
            },
          },
        ],
      },
      "hash_": "(hash)",
      "origin": {
        "interior": {
          "X1": {
            "Parachain": 1000,
          },
        },
        "parents": 1,
      },
    },
    "method": "AssetsTrapped",
    "section": "polkadotXcm",
  },
]
`;

exports[`Trapped assets > peregrine message queue 1`] = `
[
  {
    "data": {
      "error": "FailedToTransactAsset",
      "messageHash": "(hash)",
      "messageId": "(hash)",
      "weight": {
        "proofSize": 0,
        "refTime": 800000000,
      },
    },
    "method": "Fail",
    "section": "xcmpQueue",
  },
]
`;

exports[`Trapped assets > sender events foreignAssets 1`] = `
[
  {
    "data": {
      "amount": 50000000000000000,
      "assetId": {
        "interior": {
          "X2": [
            {
              "GlobalConsensus": {
                "Ethereum": {
                  "chainId": "(rounded 11000000)",
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x06012c8cf97bead5deae237070f9587f8e7a266d",
                "network": null,
              },
            },
          ],
        },
        "parents": 2,
      },
      "from": "5Go9qhpqq2EzAZ1SKkkx6bTjnSoTnHEB8FHCnieNS57TimEF",
      "to": "5Eg2fnshxV9kofpcNEFE7azHLAjcCtpNkbsH3kkWZasYUVKs",
    },
    "method": "Transferred",
    "section": "foreignAssets",
  },
]
`;
